2014-8-1 Yu-Sung Su     <suyusung@tsinghua.edu.cn>
   * DESCRIPTION (Version, Date): 1.7-05 (thanks to Dr. Martyn Plummer's contribution)
   * R/bayesglm: fix several bugs in bayesglm 
   * R/display: change the display for bayesglm to fit the changes stated above.
   * man/bayesglm: 
        1. change M2 and M7 example codes to make them equivalent to M1 and M3.
        2. change the description for prior.scale for the gaussian family.
   * DESCRIPTION: remove foreign and R2WinBUGS from suggests

2014-4-27 Yu-Sung Su     <suyusung@tsinghua.edu.cn>
   * DESCRIPTION (Version, Date): 1.7-03
   * R/bayesglm: revert back to the use of lm.fit to lm.wfit; put a stop when dispersion goes Inf

2014-4-24 Yu-Sung Su     <suyusung@tsinghua.edu.cn>
   * DESCRIPTION (Version, Date): 1.7-02
   * R/simmer.R: simmer attaches names to fixed effects
   * R/fitted: fitted uses correct observational weights for glmms
   * R/bayesglm: use change the use of lm.fit to lm.wfit.

2013-11-25 Yu-Sung Su     <suyusung@tsinghua.edu.cn>
   * DESCRIPTION (Version, Date): 1.6-10
   * make changes that fit to oldrelease R.
   * R/se.ranef, se.coef: change postVar to condVar

2013-9-23 Yu-Sung Su     <suyusung@tsinghua.edu.cn>
   * DESCRIPTION (Version, Date): 1.6-09
   * start supporting new lme4

2013-9-23 Yu-Sung Su     <suyusung@tsinghua.edu.cn>
   * DESCRIPTION (Version, Date): 1.6-09
   * start supporting new lme4

2013-8-22 Yu-Sung Su     <suyusung@tsinghua.edu.cn>
   * DESCRIPTION (Version, Date): 1.6-07
   * revert back to 1.6-07, stop supporting the new lme4.
   * R/bayesglm: fix various bugs

2013-8-21 Yu-Sung Su     <suyusung@tsinghua.edu.cn>
   * DESCRIPTION (Version, Date): 1.6-08
   * clean up DESCRIPTION and NAMESPACE

2013-7-12 Yu-Sung Su     <suyusung@tsinghua.edu.cn>
   * DESCRIPTION (Version, Date): 1.6-07
   * made various change to adjust the new lme4
   * currently, sim.mer is not working, waiting for revision.


2013-5-9 Yu-Sung Su     <suyusung@tsinghua.edu.cn>